# multiprocess-exercise

./: CMakeLists.txt  README.md  childA.cpp  childB.cpp  common.h  computations.h  mainParent.cpp  testComputations.cpp
